--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,15 @@
+sudo: false
 language: python
 python:
-  - "3.4"
-  - "3.3"
   - "2.7"
-  - "2.6"
-  - "pypy"
-env:
-  - DJANGO=1.4.20
-  - DJANGO=1.5.12
-  - DJANGO=1.6.11
-  - DJANGO=1.7.7
-  - DJANGO=1.8
-matrix:
-  exclude:
-    - python: "2.6"
-      env: DJANGO=1.7.7
-    - python: "2.6"
-      env: DJANGO=1.8
-    - python: "3.3"
-      env: DJANGO=1.4.20
-    - python: "3.4"
-      env: DJANGO=1.4.20
-    - python: "3.4"
-      env: DJANGO=1.5.12
-    - python: "3.4"
-      env: DJANGO=1.6.11
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "3.5"
 install:
-  - pip install -q Django==$DJANGO
-  - pip install coveralls
-script:
-  - coverage run --source=simple_elasticsearch setup.py test
-after_success:
-  - coveralls
+  # needed for python 3.2 tests - virtualenv>=14.0.0 dropped python 3.2 support
+  # coverage>=4.0 doesn't support python 3.2 properly either
+  - travis_retry pip install "virtualenv<14.0.0" tox-travis
+script: tox
+after_success: coveralls
 
