Adding some unit test

--- a/examples/example-simple/setup.cfg
+++ b/examples/example-simple/setup.cfg
@@ -1,3 +1,16 @@
 [flake8]
 ignore = E265,E501
 exclude = */migrations/*
+
+[pytest]
+DJANGO_SETTINGS_MODULE=website.settings
+addopts = --cov-report term-missing --cov blog --no-cov-on-fail --reuse-db
+
+[coverage:run]
+branch = True
+omit =
+    */apps.py
+    */migrations/*
+    website/wsgi.py
+    */urls.py
+    website/settings.py
